--- a/tuav2/package.json
+++ b/tuav2/package.json
@@ -14,6 +14,7 @@
     "infinite-scroll": "^3.0.4",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-baidu-map": "^0.21.16",
     "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
