--- a/tuav2/package.json
+++ b/tuav2/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "infinite-scroll": "^3.0.4",
+    "qrcode.vue": "^1.6.1",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
     "vue-baidu-map": "^0.21.16",
