--- a/tuav2/package.json
+++ b/tuav2/package.json
@@ -19,7 +19,7 @@
     "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vue-bus":"1.2.0"
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
